@@ -1,6 +1,0 @@
-MD5 37aec12c8c7b0e164957ec1aa3fd0189 qt-x11-free-3.3.8.tar.gz 17393124
-RMD160 65188370f6aa7093c9601783264825cf66b74eb4 qt-x11-free-3.3.8.tar.gz 17393124
-SHA256 975fa7b0c1e02f84d9013a9cde2123695fdd512ff4394ba89f530f4ee8597139 qt-x11-free-3.3.8.tar.gz 17393124
-MD5 7f056a1fa246004cb3ec19fc11a88dc1 qt-x11-immodule-unified-qt3.3.8-20070321-gentoo.diff.bz2 137387
-RMD160 7f4f79c95faa2b8e71a78308af8feae5f6a6b06a qt-x11-immodule-unified-qt3.3.8-20070321-gentoo.diff.bz2 137387
-SHA256 06994304d2b7c699c4b6ea4183877652e261170f74282e89a3700ce6d4a98918 qt-x11-immodule-unified-qt3.3.8-20070321-gentoo.diff.bz2 137387
