@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/qt
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt/ChangeLog,v 1.498 2007/11/10 21:44:33 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt/ChangeLog,v 1.499 2007/11/12 12:50:06 caleb Exp $
+
+  12 Nov 2007; Caleb Tennis <caleb@gentoo.org> -qt-3.3.8-r3.ebuild:
+  remove old version
 
   10 Nov 2007; Markus Rothe <corsair@gentoo.org> qt-4.3.2.ebuild:
   Stable on ppc64; bug #198454
